<resources>
    <string name="app_name">MyApp</string>
    <string name="next">next</string>
    <string name="button_add">+</string>
    <string name="button_scan">scan</string>
    <string name="text_result">result</string>
    <string name="button_next">Next</string>
    <string name="welcome_text"> Welcome :)  In my app you can split your check between friends or view previous checks</string>
    <string name="previous_button">previous checks</string>
    <string name="scan_button">scan check</string>
    <string name="gallery_button">check from gallery</string>
    <string name="logo">SplitPay</string>
    <string name="good_luck">Good luck :)</string>
    <string name="add_one_more_check">add one more check</string>
    <string name="title_activity_fab">Fab</string>
    <string name="name_check">name</string>
    <string name="date_check">date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_name">Enter name</string>
    <string name="pay">Заплатил</string>
    <string name="helpMessage">У вас пока нет сохранённых чеков</string>
    <string name="januare">января</string>
    <string name="februare">февраля</string>
    <string name="march">марта</string>
    <string name="april">апреля</string>
    <string name="may">мая</string>
    <string name="june">июня</string>
    <string name="jule">июля</string>
    <string name="august">августа</string>
    <string name="september">сентября</string>
    <string name="october">октября</string>
    <string name="december">декабря</string>
    <string name="november">ноября</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
